# embedding-model-playground

./: .env.sample  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  server.py
app/: logger.py  setting.py  vector_store.py
