[tool.poetry]
name = "vector-db-test"
version = "0.1.0"
description = ""
authors = ["HyeonSeok Suh <chucoding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.45.0"
langchain-core = "^0.3.58"
langchain-community = "^0.3.23"
langchain-openai = "^0.3.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
